controller cliente 100% funcional